@@ -13,6 +13,12 @@
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+
+      <intent-filter>
+	<action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
+      </intent-filter>
+      <meta-data android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
+		 android:resource="@xml/accessory_filter" />
     </activity>
 
     <service android:name=".MyService"/>
@@ -32,6 +38,7 @@
   <uses-feature android:name="android.hardware.location" android:required="false"/>
   <uses-feature android:name="android.hardware.location.network" android:required="false"/>
   <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
+  <uses-feature android:name="android.hardware.usb.accessory" android:required="false"/>
 
   <!-- Allow installation on faked touchscreen -->
   <uses-feature android:name="android.hardware.faketouch" android:required="false"/>
